--- a/fblogin/index.html
+++ b/fblogin/index.html
@@ -4,6 +4,7 @@
   <title>Facebook - login or signup</title>
   <link rel="stylesheet" type="text/css" href="style.css">
  <link href="https://fonts.googleapis.com/css?family=Glass-Antiqua|Macondo-Swash-Caps" rel="stylesheet">
+  <link rel="icon" type="png" href="skullicon.png">
 </head>
 <body>
   <nav class="navbar">
